Updated hw8 depricated new Integer(val) with Integer.valueOf(val)