@@ -58,7 +58,7 @@ public class BinarySearchTreeTest01_starter {
 	@Test
 	public void testSize_tree1_update() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree1();
-		tree.put(new Integer(42), "Prof Dodds");
+		tree.put(Integer.valueOf(42), "Prof Dodds");
 		assertEquals(1, tree.size());
 	}
 
@@ -181,141 +181,141 @@ public class BinarySearchTreeTest01_starter {
 	@Test
 	public void testContainsKey_tree0() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree0();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertFalse(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertFalse(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertFalse(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertFalse(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertFalse(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertFalse(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree1() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree1();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertFalse(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertFalse(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertFalse(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertFalse(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree2right() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2right();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertFalse(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertFalse(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree2left() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2left();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertFalse(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertFalse(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree3() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree3();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree4a() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4a();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertTrue(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertTrue(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree4b() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4b();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertTrue(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertTrue(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree4c() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4c();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertTrue(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertTrue(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree4d() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4d();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertTrue(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertTrue(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree7() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree7();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertTrue(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertTrue(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertTrue(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertTrue(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertTrue(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertTrue(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertTrue(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertTrue(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	/********************
@@ -325,83 +325,83 @@ public class BinarySearchTreeTest01_starter {
 	@Test
 	public void testGet_tree0() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree0();
-		assertEquals(null, tree.get(new Integer(42)));
+		assertEquals(null, tree.get(Integer.valueOf(42)));
 	}
 
 	@Test
 	public void testGet_tree1() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree1();
-		assertEquals("Dodds", tree.get(new Integer(42)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
 	}
 
 	@Test
 	public void testGet_tree2right() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2right();
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 	}
 
 	@Test
 	public void testGet_tree2left() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2left();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
 	}
 
 	@Test
 	public void testGet_tree3() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree3();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 	}
 
 	@Test
 	public void testGet_tree4a() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4a();
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 	}
 
 	@Test
 	public void testGet_tree4b() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4b();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 	}
 
 	@Test
 	public void testGet_tree4c() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4c();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 	}
 
 	@Test
 	public void testGet_tree4d() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4d();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 	}
 
 	@Test
 	public void testGet_tree7() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree7();
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 	}
 
 	/********************
@@ -447,13 +447,13 @@ public class BinarySearchTreeTest01_starter {
 	@Test
 	public void testPut_checkReturn() {
 		BinarySearchTree<Integer, String> tree = new BinarySearchTree<Integer, String>();
-		assertNull(tree.put(new Integer(42), "Dodds"));
-		assertNull(tree.put(new Integer(26), "Ben"));
-		assertNull(tree.put(new Integer(52), "Colleen"));
-		assertNull(tree.put(new Integer(60), "Ran"));
-		assertNull(tree.put(new Integer(18), "Beth"));
-		assertNull(tree.put(new Integer(45), "Julie"));
-		assertNull(tree.put(new Integer(30), "Stone"));
+		assertNull(tree.put(Integer.valueOf(42), "Dodds"));
+		assertNull(tree.put(Integer.valueOf(26), "Ben"));
+		assertNull(tree.put(Integer.valueOf(52), "Colleen"));
+		assertNull(tree.put(Integer.valueOf(60), "Ran"));
+		assertNull(tree.put(Integer.valueOf(18), "Beth"));
+		assertNull(tree.put(Integer.valueOf(45), "Julie"));
+		assertNull(tree.put(Integer.valueOf(30), "Stone"));
 	}
 
 	/********************
@@ -464,25 +464,25 @@ public class BinarySearchTreeTest01_starter {
 	public void testPutAll_tree7() {
 		// we do not have a guarantee of the structure when using putAll
 		Map<Integer, String> otherMap = new HashMap<Integer, String>();
-		otherMap.put(new Integer(42), "Dodds");
-		otherMap.put(new Integer(26), "Ben");
-		otherMap.put(new Integer(52), "Colleen");
-		otherMap.put(new Integer(60), "Ran");
-		otherMap.put(new Integer(18), "Beth");
-		otherMap.put(new Integer(45), "Julie");
-		otherMap.put(new Integer(30), "Stone");
+		otherMap.put(Integer.valueOf(42), "Dodds");
+		otherMap.put(Integer.valueOf(26), "Ben");
+		otherMap.put(Integer.valueOf(52), "Colleen");
+		otherMap.put(Integer.valueOf(60), "Ran");
+		otherMap.put(Integer.valueOf(18), "Beth");
+		otherMap.put(Integer.valueOf(45), "Julie");
+		otherMap.put(Integer.valueOf(30), "Stone");
 
 		BinarySearchTree<Integer, String> tree = new BinarySearchTree<Integer, String>();
 		tree.putAll(otherMap);
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertTrue(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertTrue(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertTrue(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertTrue(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertTrue(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertTrue(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertTrue(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertTrue(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 }
