@@ -13,7 +13,7 @@ public class BinarySearchTreeTest04_remove {
 	@Test
 	public void testRemove_tree0() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree0();
-		String value = tree.remove(new Integer(7));
+		String value = tree.remove(Integer.valueOf(7));
 		assertNull(value); // did not contain the previous key!
 	}
 
@@ -21,12 +21,12 @@ public class BinarySearchTreeTest04_remove {
 	public void testRemove_tree1_root() {
 		// remove root in tree with 1 node
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree1();
-		assertEquals("Dodds", tree.get(new Integer(42)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
 		assertEquals(1, tree.size());
 
-		assertEquals("Dodds", tree.remove(new Integer(42)));
-		assertNull(tree.get(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(42)));
+		assertEquals("Dodds", tree.remove(Integer.valueOf(42)));
+		assertNull(tree.get(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(42)));
 		assertFalse(tree.containsValue("Dodds"));
 		assertEquals(0, tree.size());
 	}
@@ -35,15 +35,15 @@ public class BinarySearchTreeTest04_remove {
 	public void testRemove_tree2right_root() {
 		// remove root with only right subtree
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2right();
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 		assertEquals(2, tree.size());
 
-		assertEquals("Dodds", tree.remove(new Integer(42)));
-		assertNull(tree.get(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(42)));
+		assertEquals("Dodds", tree.remove(Integer.valueOf(42)));
+		assertNull(tree.get(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(42)));
 		assertFalse(tree.containsValue("Dodds"));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 		assertEquals(1, tree.size());
 	}
 
@@ -51,15 +51,15 @@ public class BinarySearchTreeTest04_remove {
 	public void testRemove_tree2left_root() {
 		// remove root with only left subtree
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2left();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
 		assertEquals(2, tree.size());
 
-		assertEquals("Dodds", tree.remove(new Integer(42)));
-		assertNull(tree.get(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(42)));
+		assertEquals("Dodds", tree.remove(Integer.valueOf(42)));
+		assertNull(tree.get(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(42)));
 		assertFalse(tree.containsValue("Dodds"));
-		assertEquals("Ben", tree.get(new Integer(26)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
 		assertEquals(1, tree.size());
 	}
 
@@ -67,17 +67,17 @@ public class BinarySearchTreeTest04_remove {
 	public void testRemove_tree3_root() {
 		// remove root with left and right subtrees
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree3();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 		assertEquals(3, tree.size());
 
-		assertEquals("Dodds", tree.remove(new Integer(42)));
-		assertNull(tree.get(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(42)));
+		assertEquals("Dodds", tree.remove(Integer.valueOf(42)));
+		assertNull(tree.get(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(42)));
 		assertFalse(tree.containsValue("Dodds"));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 		assertEquals(2, tree.size());
 	}
 
@@ -85,25 +85,25 @@ public class BinarySearchTreeTest04_remove {
 	public void testRemove_tree7_leftChild() {
 		// remove left child node
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree7();
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 		assertEquals(7, tree.size());
 
-		assertEquals("Ben", tree.remove(new Integer(26)));
-		assertNull(tree.get(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(26)));
+		assertEquals("Ben", tree.remove(Integer.valueOf(26)));
+		assertNull(tree.get(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(26)));
 		assertFalse(tree.containsValue("Ben"));
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 		assertEquals(6, tree.size());
 	}
 
@@ -111,25 +111,25 @@ public class BinarySearchTreeTest04_remove {
 	public void testRemove_tree7_rightChild() {
 		// remove right child node
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree7();
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 		assertEquals(7, tree.size());
 
-		assertEquals("Colleen", tree.remove(new Integer(52)));
-		assertNull(tree.get(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(52)));
+		assertEquals("Colleen", tree.remove(Integer.valueOf(52)));
+		assertNull(tree.get(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(52)));
 		assertFalse(tree.containsValue("Colleen"));
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 		assertEquals(6, tree.size());
 	}
 
@@ -137,58 +137,58 @@ public class BinarySearchTreeTest04_remove {
 	public void testRemove_tree7_none() {
 		// remove keys not in tree
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree7();
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 		assertEquals(7, tree.size());
 
-		assertNull(tree.remove(new Integer(10)));
-		assertNull(tree.remove(new Integer(22)));
-		assertNull(tree.remove(new Integer(27)));
-		assertNull(tree.remove(new Integer(34)));
-		assertNull(tree.remove(new Integer(44)));
-		assertNull(tree.remove(new Integer(47)));
-		assertNull(tree.remove(new Integer(55)));
-		assertNull(tree.remove(new Integer(65)));
+		assertNull(tree.remove(Integer.valueOf(10)));
+		assertNull(tree.remove(Integer.valueOf(22)));
+		assertNull(tree.remove(Integer.valueOf(27)));
+		assertNull(tree.remove(Integer.valueOf(34)));
+		assertNull(tree.remove(Integer.valueOf(44)));
+		assertNull(tree.remove(Integer.valueOf(47)));
+		assertNull(tree.remove(Integer.valueOf(55)));
+		assertNull(tree.remove(Integer.valueOf(65)));
 		assertEquals(7, tree.size());
 	}
 
 	@Test
 	public void testRemove_tree4leftUnbalancedLeft_root() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4leftUnbalanced();
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 
-		assertEquals("Dodds", tree.remove(new Integer(4)));
-		assertNull(tree.get(new Integer(4)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		assertEquals("Dodds", tree.remove(Integer.valueOf(4)));
+		assertNull(tree.get(Integer.valueOf(4)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 	}
 
 	@Test
 	public void testRemove_tree4leftUnbalanced_child() {
 		BinarySearchTree<Integer, String> tree = new BinarySearchTree<Integer, String>();
-		tree.put(new Integer(4), "Dodds");
-		tree.put(new Integer(3), "Colleen");
-		tree.put(new Integer(2), "Beth");
-		tree.put(new Integer(1), "A Prof");
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		tree.put(Integer.valueOf(4), "Dodds");
+		tree.put(Integer.valueOf(3), "Colleen");
+		tree.put(Integer.valueOf(2), "Beth");
+		tree.put(Integer.valueOf(1), "A Prof");
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 
-		assertEquals("Colleen", tree.remove(new Integer(3)));
-		assertNull(tree.get(new Integer(3)));
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		assertEquals("Colleen", tree.remove(Integer.valueOf(3)));
+		assertNull(tree.get(Integer.valueOf(3)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 	}
 
 	@Test
@@ -199,20 +199,20 @@ public class BinarySearchTreeTest04_remove {
 		// ........3.....
 		// ...........4..
 		BinarySearchTree<Integer, String> tree = new BinarySearchTree<Integer, String>();
-		tree.put(new Integer(1), "A Prof");
-		tree.put(new Integer(2), "Beth");
-		tree.put(new Integer(3), "Colleen");
-		tree.put(new Integer(4), "Dodds");
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		tree.put(Integer.valueOf(1), "A Prof");
+		tree.put(Integer.valueOf(2), "Beth");
+		tree.put(Integer.valueOf(3), "Colleen");
+		tree.put(Integer.valueOf(4), "Dodds");
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 
-		assertEquals("A Prof", tree.remove(new Integer(1)));
-		assertNull(tree.get(new Integer(1)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Dodds", tree.get(new Integer(4)));
+		assertEquals("A Prof", tree.remove(Integer.valueOf(1)));
+		assertNull(tree.get(Integer.valueOf(1)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
 	}
 
 	@Test
@@ -223,20 +223,20 @@ public class BinarySearchTreeTest04_remove {
 		// ........3.....
 		// ...........4..
 		BinarySearchTree<Integer, String> tree = new BinarySearchTree<Integer, String>();
-		tree.put(new Integer(1), "A Prof");
-		tree.put(new Integer(2), "Beth");
-		tree.put(new Integer(3), "Colleen");
-		tree.put(new Integer(4), "Dodds");
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		tree.put(Integer.valueOf(1), "A Prof");
+		tree.put(Integer.valueOf(2), "Beth");
+		tree.put(Integer.valueOf(3), "Colleen");
+		tree.put(Integer.valueOf(4), "Dodds");
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 
-		assertEquals("Colleen", tree.remove(new Integer(3)));
-		assertNull(tree.get(new Integer(3)));
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		assertEquals("Colleen", tree.remove(Integer.valueOf(3)));
+		assertNull(tree.get(Integer.valueOf(3)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 	}
 
 }
