@@ -58,7 +58,7 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testSize_tree1_update() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree1();
-		tree.put(new Integer(42), "Prof Dodds");
+		tree.put(Integer.valueOf(42), "Prof Dodds");
 		assertEquals(1, tree.size());
 	}
 
@@ -181,141 +181,141 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testContainsKey_tree0() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree0();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertFalse(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertFalse(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertFalse(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertFalse(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertFalse(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertFalse(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree1() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree1();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertFalse(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertFalse(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertFalse(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertFalse(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree2right() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2right();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertFalse(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertFalse(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree2left() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2left();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertFalse(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertFalse(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree3() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree3();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree4a() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4a();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertTrue(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertTrue(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree4b() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4b();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertTrue(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertTrue(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree4c() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4c();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertTrue(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertTrue(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree4d() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4d();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertFalse(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertTrue(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertFalse(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertTrue(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	@Test
 	public void testContainsKey_tree7() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree7();
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertTrue(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertTrue(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertTrue(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertTrue(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertTrue(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertTrue(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertTrue(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertTrue(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	/********************
@@ -325,83 +325,83 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testGet_tree0() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree0();
-		assertEquals(null, tree.get(new Integer(42)));
+		assertEquals(null, tree.get(Integer.valueOf(42)));
 	}
 
 	@Test
 	public void testGet_tree1() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree1();
-		assertEquals("Dodds", tree.get(new Integer(42)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
 	}
 
 	@Test
 	public void testGet_tree2right() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2right();
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 	}
 
 	@Test
 	public void testGet_tree2left() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2left();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
 	}
 
 	@Test
 	public void testGet_tree3() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree3();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 	}
 
 	@Test
 	public void testGet_tree4a() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4a();
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 	}
 
 	@Test
 	public void testGet_tree4b() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4b();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 	}
 
 	@Test
 	public void testGet_tree4c() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4c();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 	}
 
 	@Test
 	public void testGet_tree4d() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4d();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 	}
 
 	@Test
 	public void testGet_tree7() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree7();
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 	}
 
 	/********************
@@ -447,13 +447,13 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testPut_checkReturn() {
 		BinarySearchTree<Integer, String> tree = new BinarySearchTree<Integer, String>();
-		assertNull(tree.put(new Integer(42), "Dodds"));
-		assertNull(tree.put(new Integer(26), "Ben"));
-		assertNull(tree.put(new Integer(52), "Colleen"));
-		assertNull(tree.put(new Integer(60), "Ran"));
-		assertNull(tree.put(new Integer(18), "Beth"));
-		assertNull(tree.put(new Integer(45), "Julie"));
-		assertNull(tree.put(new Integer(30), "Stone"));
+		assertNull(tree.put(Integer.valueOf(42), "Dodds"));
+		assertNull(tree.put(Integer.valueOf(26), "Ben"));
+		assertNull(tree.put(Integer.valueOf(52), "Colleen"));
+		assertNull(tree.put(Integer.valueOf(60), "Ran"));
+		assertNull(tree.put(Integer.valueOf(18), "Beth"));
+		assertNull(tree.put(Integer.valueOf(45), "Julie"));
+		assertNull(tree.put(Integer.valueOf(30), "Stone"));
 	}
 
 	/********************
@@ -464,25 +464,25 @@ public class BinarySearchTreeTest_all {
 	public void testPutAll_tree7() {
 		// we do not have a guarantee of the structure when using putAll
 		Map<Integer, String> otherMap = new HashMap<Integer, String>();
-		otherMap.put(new Integer(42), "Dodds");
-		otherMap.put(new Integer(26), "Ben");
-		otherMap.put(new Integer(52), "Colleen");
-		otherMap.put(new Integer(60), "Ran");
-		otherMap.put(new Integer(18), "Beth");
-		otherMap.put(new Integer(45), "Julie");
-		otherMap.put(new Integer(30), "Stone");
+		otherMap.put(Integer.valueOf(42), "Dodds");
+		otherMap.put(Integer.valueOf(26), "Ben");
+		otherMap.put(Integer.valueOf(52), "Colleen");
+		otherMap.put(Integer.valueOf(60), "Ran");
+		otherMap.put(Integer.valueOf(18), "Beth");
+		otherMap.put(Integer.valueOf(45), "Julie");
+		otherMap.put(Integer.valueOf(30), "Stone");
 
 		BinarySearchTree<Integer, String> tree = new BinarySearchTree<Integer, String>();
 		tree.putAll(otherMap);
-		assertFalse(tree.containsKey(new Integer(10)));
-		assertTrue(tree.containsKey(new Integer(18)));
-		assertTrue(tree.containsKey(new Integer(26)));
-		assertTrue(tree.containsKey(new Integer(30)));
-		assertTrue(tree.containsKey(new Integer(42)));
-		assertTrue(tree.containsKey(new Integer(45)));
-		assertTrue(tree.containsKey(new Integer(52)));
-		assertTrue(tree.containsKey(new Integer(60)));
-		assertFalse(tree.containsKey(new Integer(90)));
+		assertFalse(tree.containsKey(Integer.valueOf(10)));
+		assertTrue(tree.containsKey(Integer.valueOf(18)));
+		assertTrue(tree.containsKey(Integer.valueOf(26)));
+		assertTrue(tree.containsKey(Integer.valueOf(30)));
+		assertTrue(tree.containsKey(Integer.valueOf(42)));
+		assertTrue(tree.containsKey(Integer.valueOf(45)));
+		assertTrue(tree.containsKey(Integer.valueOf(52)));
+		assertTrue(tree.containsKey(Integer.valueOf(60)));
+		assertFalse(tree.containsKey(Integer.valueOf(90)));
 	}
 
 	/********************
@@ -498,63 +498,63 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testGetMinKey_tree1() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree1();
-		assertEquals(new Integer(42), tree.getMinKey());
+		assertEquals(Integer.valueOf(42), tree.getMinKey());
 	}
 
 	@Test
 	public void testGetMinKey_tree1_swap() {
 		// same test as getMinKey1 but the key and values swapped
 		BinarySearchTree<String, Integer> tree = new BinarySearchTree<String, Integer>();
-		tree.put("Dodds", new Integer(42));
+		tree.put("Dodds", Integer.valueOf(42));
 		assertEquals("Dodds", tree.getMinKey());
 	}
 
 	@Test
 	public void testGetMinKey_tree2right() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2right();
-		assertEquals(new Integer(42), tree.getMinKey());
+		assertEquals(Integer.valueOf(42), tree.getMinKey());
 	}
 
 	@Test
 	public void testGetMinKey_tree2left() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2left();
-		assertEquals(new Integer(26), tree.getMinKey());
+		assertEquals(Integer.valueOf(26), tree.getMinKey());
 	}
 
 	@Test
 	public void testGetMinKey_tree3() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree3();
-		assertEquals(new Integer(26), tree.getMinKey());
+		assertEquals(Integer.valueOf(26), tree.getMinKey());
 	}
 
 	@Test
 	public void testGetMinKey_tree4a() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4a();
-		assertEquals(new Integer(18), tree.getMinKey());
+		assertEquals(Integer.valueOf(18), tree.getMinKey());
 	}
 
 	@Test
 	public void testGetMinKey_tree4b() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4b();
-		assertEquals(new Integer(26), tree.getMinKey());
+		assertEquals(Integer.valueOf(26), tree.getMinKey());
 	}
 
 	@Test
 	public void testGetMinKey_tree4c() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4c();
-		assertEquals(new Integer(26), tree.getMinKey());
+		assertEquals(Integer.valueOf(26), tree.getMinKey());
 	}
 
 	@Test
 	public void testGetMinKey_tree4d() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4d();
-		assertEquals(new Integer(26), tree.getMinKey());
+		assertEquals(Integer.valueOf(26), tree.getMinKey());
 	}
 
 	@Test
 	public void testGetMinKey_tree7() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree7();
-		assertEquals(new Integer(18), tree.getMinKey());
+		assertEquals(Integer.valueOf(18), tree.getMinKey());
 	}
 
 	/********************
@@ -772,11 +772,11 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testPut_tree1_replace() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree1();
-		assertEquals("Dodds", tree.get(new Integer(42)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
 
 		// replace "Dodds" with "Beth" as the value for 42
-		assertEquals("Dodds", tree.put(new Integer(42), "Beth"));
-		assertEquals("Beth", tree.get(new Integer(42)));
+		assertEquals("Dodds", tree.put(Integer.valueOf(42), "Beth"));
+		assertEquals("Beth", tree.get(Integer.valueOf(42)));
 		assertFalse(tree.containsValue("Dodds"));
 		assertTrue(tree.containsValue("Beth"));
 	}
@@ -784,11 +784,11 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testPut_tree2right_replace() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2right();
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 
 		// replace "Colleen" with "Julie" as the value for 52
-		assertEquals("Colleen", tree.put(new Integer(52), "Julie"));
-		assertEquals("Julie", tree.get(new Integer(52)));
+		assertEquals("Colleen", tree.put(Integer.valueOf(52), "Julie"));
+		assertEquals("Julie", tree.get(Integer.valueOf(52)));
 		assertFalse(tree.containsValue("Colleen"));
 		assertTrue(tree.containsValue("Julie"));
 	}
@@ -796,11 +796,11 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testPut_tree2left_replace() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2left();
-		assertEquals("Ben", tree.get(new Integer(26)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
 
 		// replace "Ben" with "Colleen" as the value for 26
-		assertEquals("Ben", tree.put(new Integer(26), "Colleen"));
-		assertEquals("Colleen", tree.get(new Integer(26)));
+		assertEquals("Ben", tree.put(Integer.valueOf(26), "Colleen"));
+		assertEquals("Colleen", tree.get(Integer.valueOf(26)));
 		assertFalse(tree.containsValue("Ben"));
 		assertTrue(tree.containsValue("Colleen"));
 	}
@@ -808,11 +808,11 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testPut_tree3_replace() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree3();
-		assertEquals("Ben", tree.get(new Integer(26)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
 
 		// replace "Ben" with "Colleen" as the value for 26
-		assertEquals("Ben", tree.put(new Integer(26), "Colleen"));
-		assertEquals("Colleen", tree.get(new Integer(26)));
+		assertEquals("Ben", tree.put(Integer.valueOf(26), "Colleen"));
+		assertEquals("Colleen", tree.get(Integer.valueOf(26)));
 		assertFalse(tree.containsValue("Ben"));
 		assertTrue(tree.containsValue("Colleen"));
 	}
@@ -820,11 +820,11 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testPut_tree4a_replace() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4a();
-		assertEquals("Beth", tree.get(new Integer(18)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
 
 		// replace "Beth" with "Julie" as the value for 18
-		assertEquals("Beth", tree.put(new Integer(18), "Julie"));
-		assertEquals("Julie", tree.get(new Integer(18)));
+		assertEquals("Beth", tree.put(Integer.valueOf(18), "Julie"));
+		assertEquals("Julie", tree.get(Integer.valueOf(18)));
 		assertFalse(tree.containsValue("Beth"));
 		assertTrue(tree.containsValue("Julie"));
 	}
@@ -832,11 +832,11 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testPut_tree4b_replace() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4b();
-		assertEquals("Stone", tree.get(new Integer(30)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
 
 		// replace "Stone" with "Beth" as the value for 30
-		assertEquals("Stone", tree.put(new Integer(30), "Beth"));
-		assertEquals("Beth", tree.get(new Integer(30)));
+		assertEquals("Stone", tree.put(Integer.valueOf(30), "Beth"));
+		assertEquals("Beth", tree.get(Integer.valueOf(30)));
 		assertFalse(tree.containsValue("Stone"));
 		assertTrue(tree.containsValue("Beth"));
 	}
@@ -844,11 +844,11 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testPut_tree4c_replace() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4c();
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 
 		// replace "Colleen" with "Julie" as the value for 52
-		assertEquals("Colleen", tree.put(new Integer(52), "Julie"));
-		assertEquals("Julie", tree.get(new Integer(52)));
+		assertEquals("Colleen", tree.put(Integer.valueOf(52), "Julie"));
+		assertEquals("Julie", tree.get(Integer.valueOf(52)));
 		assertFalse(tree.containsValue("Colleen"));
 		assertTrue(tree.containsValue("Julie"));
 	}
@@ -860,7 +860,7 @@ public class BinarySearchTreeTest_all {
 	@Test
 	public void testRemove_tree0() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree0();
-		String value = tree.remove(new Integer(7));
+		String value = tree.remove(Integer.valueOf(7));
 		assertNull(value); // did not contain the previous key!
 	}
 
@@ -868,12 +868,12 @@ public class BinarySearchTreeTest_all {
 	public void testRemove_tree1_root() {
 		// remove root in tree with 1 node
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree1();
-		assertEquals("Dodds", tree.get(new Integer(42)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
 		assertEquals(1, tree.size());
 
-		assertEquals("Dodds", tree.remove(new Integer(42)));
-		assertNull(tree.get(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(42)));
+		assertEquals("Dodds", tree.remove(Integer.valueOf(42)));
+		assertNull(tree.get(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(42)));
 		assertFalse(tree.containsValue("Dodds"));
 		assertEquals(0, tree.size());
 	}
@@ -882,15 +882,15 @@ public class BinarySearchTreeTest_all {
 	public void testRemove_tree2right_root() {
 		// remove root with only right subtree
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2right();
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 		assertEquals(2, tree.size());
 
-		assertEquals("Dodds", tree.remove(new Integer(42)));
-		assertNull(tree.get(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(42)));
+		assertEquals("Dodds", tree.remove(Integer.valueOf(42)));
+		assertNull(tree.get(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(42)));
 		assertFalse(tree.containsValue("Dodds"));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 		assertEquals(1, tree.size());
 	}
 
@@ -898,15 +898,15 @@ public class BinarySearchTreeTest_all {
 	public void testRemove_tree2left_root() {
 		// remove root with only left subtree
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree2left();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
 		assertEquals(2, tree.size());
 
-		assertEquals("Dodds", tree.remove(new Integer(42)));
-		assertNull(tree.get(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(42)));
+		assertEquals("Dodds", tree.remove(Integer.valueOf(42)));
+		assertNull(tree.get(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(42)));
 		assertFalse(tree.containsValue("Dodds"));
-		assertEquals("Ben", tree.get(new Integer(26)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
 		assertEquals(1, tree.size());
 	}
 
@@ -914,17 +914,17 @@ public class BinarySearchTreeTest_all {
 	public void testRemove_tree3_root() {
 		// remove root with left and right subtrees
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree3();
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 		assertEquals(3, tree.size());
 
-		assertEquals("Dodds", tree.remove(new Integer(42)));
-		assertNull(tree.get(new Integer(42)));
-		assertFalse(tree.containsKey(new Integer(42)));
+		assertEquals("Dodds", tree.remove(Integer.valueOf(42)));
+		assertNull(tree.get(Integer.valueOf(42)));
+		assertFalse(tree.containsKey(Integer.valueOf(42)));
 		assertFalse(tree.containsValue("Dodds"));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
 		assertEquals(2, tree.size());
 	}
 
@@ -932,25 +932,25 @@ public class BinarySearchTreeTest_all {
 	public void testRemove_tree7_leftChild() {
 		// remove left child node
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree7();
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 		assertEquals(7, tree.size());
 
-		assertEquals("Ben", tree.remove(new Integer(26)));
-		assertNull(tree.get(new Integer(26)));
-		assertFalse(tree.containsKey(new Integer(26)));
+		assertEquals("Ben", tree.remove(Integer.valueOf(26)));
+		assertNull(tree.get(Integer.valueOf(26)));
+		assertFalse(tree.containsKey(Integer.valueOf(26)));
 		assertFalse(tree.containsValue("Ben"));
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 		assertEquals(6, tree.size());
 	}
 
@@ -958,25 +958,25 @@ public class BinarySearchTreeTest_all {
 	public void testRemove_tree7_rightChild() {
 		// remove right child node
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree7();
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 		assertEquals(7, tree.size());
 
-		assertEquals("Colleen", tree.remove(new Integer(52)));
-		assertNull(tree.get(new Integer(52)));
-		assertFalse(tree.containsKey(new Integer(52)));
+		assertEquals("Colleen", tree.remove(Integer.valueOf(52)));
+		assertNull(tree.get(Integer.valueOf(52)));
+		assertFalse(tree.containsKey(Integer.valueOf(52)));
 		assertFalse(tree.containsValue("Colleen"));
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 		assertEquals(6, tree.size());
 	}
 
@@ -984,58 +984,58 @@ public class BinarySearchTreeTest_all {
 	public void testRemove_tree7_none() {
 		// remove keys not in tree
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree7();
-		assertEquals("Beth", tree.get(new Integer(18)));
-		assertEquals("Ben", tree.get(new Integer(26)));
-		assertEquals("Stone", tree.get(new Integer(30)));
-		assertEquals("Dodds", tree.get(new Integer(42)));
-		assertEquals("Julie", tree.get(new Integer(45)));
-		assertEquals("Colleen", tree.get(new Integer(52)));
-		assertEquals("Ran", tree.get(new Integer(60)));
+		assertEquals("Beth", tree.get(Integer.valueOf(18)));
+		assertEquals("Ben", tree.get(Integer.valueOf(26)));
+		assertEquals("Stone", tree.get(Integer.valueOf(30)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(42)));
+		assertEquals("Julie", tree.get(Integer.valueOf(45)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(52)));
+		assertEquals("Ran", tree.get(Integer.valueOf(60)));
 		assertEquals(7, tree.size());
 
-		assertNull(tree.remove(new Integer(10)));
-		assertNull(tree.remove(new Integer(22)));
-		assertNull(tree.remove(new Integer(27)));
-		assertNull(tree.remove(new Integer(34)));
-		assertNull(tree.remove(new Integer(44)));
-		assertNull(tree.remove(new Integer(47)));
-		assertNull(tree.remove(new Integer(55)));
-		assertNull(tree.remove(new Integer(65)));
+		assertNull(tree.remove(Integer.valueOf(10)));
+		assertNull(tree.remove(Integer.valueOf(22)));
+		assertNull(tree.remove(Integer.valueOf(27)));
+		assertNull(tree.remove(Integer.valueOf(34)));
+		assertNull(tree.remove(Integer.valueOf(44)));
+		assertNull(tree.remove(Integer.valueOf(47)));
+		assertNull(tree.remove(Integer.valueOf(55)));
+		assertNull(tree.remove(Integer.valueOf(65)));
 		assertEquals(7, tree.size());
 	}
 
 	@Test
 	public void testRemove_tree4leftUnbalancedLeft_root() {
 		BinarySearchTree<Integer, String> tree = BinarySearchTreeTest_helper.makeTree4leftUnbalanced();
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 
-		assertEquals("Dodds", tree.remove(new Integer(4)));
-		assertNull(tree.get(new Integer(4)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		assertEquals("Dodds", tree.remove(Integer.valueOf(4)));
+		assertNull(tree.get(Integer.valueOf(4)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 	}
 
 	@Test
 	public void testRemove_tree4leftUnbalanced_child() {
 		BinarySearchTree<Integer, String> tree = new BinarySearchTree<Integer, String>();
-		tree.put(new Integer(4), "Dodds");
-		tree.put(new Integer(3), "Colleen");
-		tree.put(new Integer(2), "Beth");
-		tree.put(new Integer(1), "A Prof");
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		tree.put(Integer.valueOf(4), "Dodds");
+		tree.put(Integer.valueOf(3), "Colleen");
+		tree.put(Integer.valueOf(2), "Beth");
+		tree.put(Integer.valueOf(1), "A Prof");
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 
-		assertEquals("Colleen", tree.remove(new Integer(3)));
-		assertNull(tree.get(new Integer(3)));
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		assertEquals("Colleen", tree.remove(Integer.valueOf(3)));
+		assertNull(tree.get(Integer.valueOf(3)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 	}
 
 	@Test
@@ -1046,20 +1046,20 @@ public class BinarySearchTreeTest_all {
 		// ........3.....
 		// ...........4..
 		BinarySearchTree<Integer, String> tree = new BinarySearchTree<Integer, String>();
-		tree.put(new Integer(1), "A Prof");
-		tree.put(new Integer(2), "Beth");
-		tree.put(new Integer(3), "Colleen");
-		tree.put(new Integer(4), "Dodds");
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		tree.put(Integer.valueOf(1), "A Prof");
+		tree.put(Integer.valueOf(2), "Beth");
+		tree.put(Integer.valueOf(3), "Colleen");
+		tree.put(Integer.valueOf(4), "Dodds");
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 
-		assertEquals("A Prof", tree.remove(new Integer(1)));
-		assertNull(tree.get(new Integer(1)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Dodds", tree.get(new Integer(4)));
+		assertEquals("A Prof", tree.remove(Integer.valueOf(1)));
+		assertNull(tree.get(Integer.valueOf(1)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
 	}
 
 	@Test
@@ -1070,20 +1070,20 @@ public class BinarySearchTreeTest_all {
 		// ........3.....
 		// ...........4..
 		BinarySearchTree<Integer, String> tree = new BinarySearchTree<Integer, String>();
-		tree.put(new Integer(1), "A Prof");
-		tree.put(new Integer(2), "Beth");
-		tree.put(new Integer(3), "Colleen");
-		tree.put(new Integer(4), "Dodds");
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Colleen", tree.get(new Integer(3)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		tree.put(Integer.valueOf(1), "A Prof");
+		tree.put(Integer.valueOf(2), "Beth");
+		tree.put(Integer.valueOf(3), "Colleen");
+		tree.put(Integer.valueOf(4), "Dodds");
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Colleen", tree.get(Integer.valueOf(3)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 
-		assertEquals("Colleen", tree.remove(new Integer(3)));
-		assertNull(tree.get(new Integer(3)));
-		assertEquals("Dodds", tree.get(new Integer(4)));
-		assertEquals("Beth", tree.get(new Integer(2)));
-		assertEquals("A Prof", tree.get(new Integer(1)));
+		assertEquals("Colleen", tree.remove(Integer.valueOf(3)));
+		assertNull(tree.get(Integer.valueOf(3)));
+		assertEquals("Dodds", tree.get(Integer.valueOf(4)));
+		assertEquals("Beth", tree.get(Integer.valueOf(2)));
+		assertEquals("A Prof", tree.get(Integer.valueOf(1)));
 	}
 
 }
